<resources>
    <string name="app_name">EYE</string>
    <string name="email">email</string>
    <string name="you_example_com">you_string_com</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="password_hint">• • • • • • • •</string>
    <string name="Sign_IN">sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign UP</string>
    <string name="we_need_a_few_details_to_get_your_account_ready">We need a few details to get your account ready.</string>
    <string name="first_name">First Name</string>
    <string name="john">John</string>
    <string name="last_name">Last Name</string>
    <string name="smith">Smith</string>
    <string name="Sign_UP">Sign UP</string>
    <string name="sign_out">Sign Out</string>
    <string name="incoming_request">Incoming Request</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="outgoing_request">Connecting to........</string>
    <string name="cancel">Cancel</string>
</resources>