<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="bold"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_meeting_invitation"
    tools:context=".activities.IncomingRequestActivity">


   <ImageView
       android:id="@+id/imageMeetingType"
       android:layout_width="@dimen/_80sdp"
       android:layout_height="@dimen/_80sdp"
       android:layout_marginTop="@dimen/_10sdp"
       android:contentDescription="@string/app_name"
       app:tint="@color/white"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textIncomingRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pt_serif_caption_italic"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/incoming_request"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pt_serif_caption"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_35sdp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:padding="@dimen/_8sdp"
        android:text="@string/accept"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#09592A"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonReject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:padding="@dimen/_8sdp"
        android:text="@string/reject"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#BC0959"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>