<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_meeting_invitation"
    tools:context=".activities.OutgoingRequestActivity">

    <ImageView
        android:id="@+id/imageMeetingType"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/app_name"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textOutgoingRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pt_serif_caption_italic"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/outgoing_request"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textUsername"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pt_serif_caption"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_35sdp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#880505"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="#1144C5"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUsername"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>